--- a/site/public/css/estilo.css
+++ b/site/public/css/estilo.css
@@ -957,7 +957,7 @@ height:438px;
 .temp_box{
   width: 100%;
   height: 170px;
- 
+  justify-content: center;
   display: flex;
   flex-direction: row;
 }
@@ -1188,4 +1188,78 @@ padding-left: 5%;
   display: flex;
   flex-direction: row;
   gap: 5px;
+}
+.alerta{
+  top: 0;
+  left: 25%;
+  height: 100vh;
+}
+
+.regua {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  width: 100%;
+  margin-top: 30px;
+  
+}
+
+.item-regua {
+  padding: 5px;
+  width: 15%;
+  margin: 5px;
+  text-align: center;
+  padding-top: 15px;
+}
+
+.perigo-frio {
+  background-color: #00008B;
+  width: 128px;
+  border-radius: 14px;
+}
+
+.perigo-quente {
+  background-color: #ff7043;
+  width: 128px;
+  border-radius: 14px;
+}
+
+.alerta-frio {
+  background-color: #469BD2;
+  width: 128px;
+  border-radius: 14px;
+}
+
+.alerta-quente {
+  background-color: #f7D917;
+  width: 128px;
+  border-radius: 14px;
+}
+
+.ideal {
+  background-color: #9ccc65;
+  width: 128px;
+  border-radius: 14px;
+}
+
+.regua h4{
+  display: flex;
+  justify-content: center;
+  color: white;
+}
+
+.regua h2{
+  display: flex;
+  justify-content: center;
+  color: white;
+}
+
+.cor-alerta {
+  width: 13%;
+  height: 13%;
+  border-radius: 50px;
+  margin-top: 6%;
+   background-color: #c7c7c7; 
+   margin-bottom: -16px;
+   margin-inline-start: auto;
 }
