--- a/site/public/css/estilo.css
+++ b/site/public/css/estilo.css
@@ -13,7 +13,7 @@ html {
 a{
   text-decoration: none;
   color: var(--cor_primária);
-  font-weight:500;
+  font-weight:600;
 }
 
 body {
@@ -902,8 +902,6 @@ height:438px;
   background-color: #FFFEEB;
   display: flex;
   flex-direction: row;
-
-  
 }
 
 
@@ -920,6 +918,13 @@ height:438px;
 
 }
 .conteudo{
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  flex-direction: column;
+  align-items: center;
+}
+.conteudo_dashboard{
 
   display: flex;
   flex-direction: row;
@@ -928,10 +933,47 @@ height:438px;
   flex-wrap: wrap;
   width: 100%;
 
-
+}
+.chartcont{
+  display: flex;
+  width: 100%;
+  height: 100vh;
+  justify-content: space-evenly;
+  align-items: center;
+}
+.metricas{
+  width: 300px;
+  height: 160px;
+  border: 2px solid black;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  padding-left: 10px;
+  border-radius: 10px;
+  font-size: 18px;
 
 }
 
+.colmeias_button{
+  border-radius:10px;
+  background-color: #FFCB7D;
+  width: 130px;
+  height: 50px;
+  font-size: 18px;
+  border:transparent;
+  font-weight: 600;
+  text-align: center;
+  cursor: pointer;
+}
+
+.botões{
+  display: flex;
+  justify-content: space-around;
+  width: 100%;
+  justify-content: center;
+  gap: 32px;
+  margin-top: 24px;
+}
 .colmeia_card{
   background-color: #FFFCAE;
   width: 331px;
@@ -965,8 +1007,7 @@ height:438px;
   width: 50%;
   height: 100%;
   font-size: 16px;
-  justify-content: center;
-
+  justify-content: space-around;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -1046,7 +1087,8 @@ height:438px;
 }
 
 .card_graficos{
-  width:80%;
+  width:700px;
+  height: 600px;
   display:flex;
   flex-direction: column;
   align-items: center;
@@ -1249,10 +1291,9 @@ padding-left: 5%;
 }
 
 .cor-alerta {
-  width: 13%;
-  height: 13%;
+  width: 10%;
+  height: 10%;
   border-radius: 50px;
-  margin-top: 6%;
   border: 1px black solid;
    margin-bottom: -16px;
    margin-inline-start: auto;
